# dbbase

./: pyproject.toml
src/dbbase/: __init__.py  dbdata.py  dbdataio.py  dbdir.py  dbidbase.py  dbidmodval.py  dbiobase.py  dbrootdataio.py  fileselector.py  paramsbase.py  standardname.py
src/dbbase/old/: iodatabase.py  old.py
tests/: test_dataio.py  test_dbdata.py  test_dbdir.py  test_dbid.py  test_fileselector.py  test_params.py  test_rootdata.py  test_standardname.py
