[tool.poetry]
name = "dbbase"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "dbbase", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
pandas = "^2.1.0"
numpy = "^1.25.2"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
